# PCC_Draw

./: CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-08-pcc-draw-animation.md
docs/superpowers/specs/: 2026-06-08-pcc-draw-animation-design.md
src/pcc_draw/: __init__.py  __main__.py  animate.py  draw.py  schedule.py
tests/: test_animate.py  test_draw.py  test_schedule.py
