[project]
name = "pcc-draw"
version = "0.1.0"
description = "PCC 크로마토그래피 컬럼 스케줄 matplotlib 애니메이션"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "pillow>=10"]

[project.scripts]
pcc-draw = "pcc_draw.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcc_draw"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
